chore: updated code structure

--- a/flora-engine/flora-engine.vcxproj
+++ b/flora-engine/flora-engine.vcxproj
@@ -133,13 +133,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="game_state.c" />
+    <ClCompile Include="input_handling.c" />
     <ClCompile Include="main.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Makefile" />
+    <ClCompile Include="scene.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="flora_constants.h" />
+    <ClInclude Include="game_state.h" />
+    <ClInclude Include="input_handling.h" />
+    <ClInclude Include="scene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
