feat: event handling with event queue
- added event queue
- widgets can now handle events
- widgets can now be of any colour, not just blue

--- a/flora-engine/flora-engine.vcxproj
+++ b/flora-engine/flora-engine.vcxproj
@@ -141,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="app_state.h" />
+    <ClInclude Include="flora_constants.h" />
     <ClInclude Include="flora_widget.h" />
     <ClInclude Include="input_handling.h" />
     <ClInclude Include="scene.h" />
