refactor: style, naming and consistency

--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -5,19 +5,23 @@ project(flora-engine C)
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 #TODO: Change this depending on your system
 set(SDL3_DIR "C:/libs/SDL3/x86_64-w64-mingw32/lib/cmake/SDL3")
 find_package(SDL3 REQUIRED CONFIG)
 
 set(SOURCES
-        "app_state.c"
-        "flora_widget.c"
-        "input_handling.c"
-        "main.c"
-        "scene.c"
+    "src/flora_events.c"
+    "src/flora_fonts.c"
+    "src/flora_screens.c"
+    "src/flora_widgets.c"
+    "src/flora_apps.c"
+    "src/main.c"
 )
 
+#TODO: Change this depending on your system
 add_executable(flora-engine WIN32 ${SOURCES})
+target_include_directories(flora-engine PRIVATE "include")
 
 target_link_libraries(flora-engine PRIVATE SDL3::SDL3)
